# rules_oci_manifest_repro

./: BUILD.bazel  MODULE.bazel  README.md  docker_inspect.sh  expected_inspect.txt  expected_manifest.json
.github/workflows/: main.yaml
